[package]
name = "hyper-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.4"
hyper = { version = "0.14", features = [ "full"] }
rustls = "0.19"
tokio-rustls = "0.22"
futures-util = "0.3.1"
tokio = { version = "1.0", features = ["full"] }
async-stream = "0.3.2"
http = "0.2"
hyper-rustls = "0.22.1"
pretty_env_logger = "0.4"