[package]
name = "hyper-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.4"
hyper = { version = "0.14", features = [ "full" ] }
rustls = "0.19"
tokio-rustls = "0.22"
futures-util = "0.3.1"
tokio = { version = "1.0", features = ["full"] }
async-stream = "0.3.2"
http = "0.2"
hyper-rustls = {version = "0.23.0",features = [ "http2" ]}
pretty_env_logger = "0.4"
pin-project-lite = "0.2.7"
once_cell = "1.10.0"
thiserror = "1.0.30"
futures ="0.3.21"
bytes = "1.1.0"